Adicionando filtro nas metricas

--- a/administrativo/templates/dashboard-summary.html
+++ b/administrativo/templates/dashboard-summary.html
@@ -24,32 +24,40 @@
     <div class="row">
         <h5 class="font-weight-bold">Filtros</h5>
     </div>
-    <div class="row">
-        <div class="col-12 col-sm-12 col-md-6">
-            <select class="browser-default custom-select" id="ano" name="ano">
-                <option selected value="">Ano</option>
-                <option value="2020">2020</option>
-                <option value="2019">2019</option>
-            </select>
+    <form action="." method="get">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-4">
+                <select class="browser-default custom-select" id="ano" name="ano">
+                    <option selected value="">Ano</option>
+                    <option value="2020">2020</option>
+                    <option value="2019">2019</option>
+                </select>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4">
+                <select class="browser-default custom-select" id="mes" name="mes">
+                    <option selected value="">Mês</option>
+                    <option value="1">01</option>
+                    <option value="2">02</option>
+                    <option value="3">03</option>
+                    <option value="4">04</option>
+                    <option value="5">05</option>
+                    <option value="6">06</option>
+                    <option value="7">07</option>
+                    <option value="8">08</option>
+                    <option value="9">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
+            </div>
+            <div class="col-12 col-sm-12 col-md-2">
+                <button type="submit" class="btn btn-info btn-block" name="filtrar" title="Filtrar" value="Filtrar">Filtrar</button>
+            </div>
+            <div class="col-12 col-sm-12 col-md-2">
+                <button type="submit" class="btn btn-warning btn-block" name="limpar" title="Limpar filtros" value="Limpar">Limpar</button>
+            </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-6">
-            <select class="browser-default custom-select" id="mes" name="mes">
-                <option selected value="">Mês</option>
-                <option value="1">01</option>
-                <option value="2">02</option>
-                <option value="3">03</option>
-                <option value="4">04</option>
-                <option value="5">05</option>
-                <option value="6">06</option>
-                <option value="7">07</option>
-                <option value="8">08</option>
-                <option value="9">09</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-            </select>
-        </div>
-    </div><br>
+    </form><br>
 
     <!-- MÉTRICAS -->
     <div class="row">
@@ -65,7 +73,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Comprados</span>
                     <span class="info-box-number">
-                        {% if sum_valor_entradas %}R$ {{ sum_valor_entradas }}{% else %}#error{% endif %}
+                        R$ {{ sum_valor_entradas|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -79,7 +87,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Em carteira</span>
                     <span class="info-box-number">
-                        {% if sum_valor_carteira %}R$ {{ sum_valor_carteira }}{% else %}#error{% endif %}
+                        R$ {{ sum_valor_carteira|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -93,7 +101,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Utilizados</span>
                     <span class="info-box-number">
-                        {% if sum_valor_saidas %}R$ {{ sum_valor_saidas }}{% else %}#error{% endif%}
+                        R$ {{ sum_valor_saidas|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -113,7 +121,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Total de paradas</span>
                     <span class="info-box-number">
-                        {% if sum_total_paradas %}{{ sum_total_paradas }}{% else %}#error{% endif%}
+                        {{ sum_total_paradas|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -127,7 +135,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Total de paradas ativas</span>
                     <span class="info-box-number">
-                        {% if sum_total_paradas_ativas %}{{ sum_total_paradas_ativas }}{% else %}#error{% endif%}
+                        {{ sum_total_paradas_ativas|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -142,7 +150,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Total de notificações</span>
                     <span class="info-box-number">
-                        {% if sum_total_notificacoes %}{{ sum_total_notificacoes }}{% else %}#error{% endif%}
+                        {{ sum_total_notificacoes|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -156,7 +164,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Taxa de notificações</span>
                     <span class="info-box-number">
-                        {% if taxa_notificacoes %}{{ taxa_notificacoes }}<small>%</small>{% else %}#error{% endif%}
+                        {{ taxa_notificacoes|default_if_none:"0.00" }}<small>%</small>
                     </span>
                 </div>
             </div>
@@ -170,7 +178,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Total de infrações</span>
                     <span class="info-box-number">
-                        {% if sum_total_infracoes %}{{ sum_total_infracoes }}{% else %}#error{% endif%}
+                        {{ sum_total_infracoes|default_if_none:"0.00" }}
                     </span>
                 </div>
             </div>
@@ -184,7 +192,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Taxa de infrações</span>
                     <span class="info-box-number">
-                        {% if taxa_infracoes %}{{ taxa_infracoes }}<small>%</small>{% else %}#error{% endif%}
+                        {{ taxa_infracoes|default_if_none:"0.00" }}<small>%</small>
                     </span>
                 </div>
             </div>
@@ -204,7 +212,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Total de horas válidas</span>
                     <span class="info-box-number">
-                        {% if horas_validas %}{{ horas_validas }}<small>h</small>{% else %}#error{% endif%}
+                        {{ horas_validas|default_if_none:"0.00" }}<small>h</small>
                     </span>
                 </div>
             </div>
@@ -218,7 +226,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Total de horas válidas usadas</span>
                     <span class="info-box-number">
-                        {% if total_horas_paradas %}{{ total_horas_paradas }}<small>h</small>{% else %}#error{% endif%}
+                        {{ total_horas_paradas|default_if_none:"0.00" }}<small>h</small>
                     </span>
                 </div>
             </div>
@@ -232,7 +240,7 @@
                 <div class="info-box-content">
                     <span class="info-box-text">Delta</span>
                     <span class="info-box-number">
-                        {% if delta_horas_paradas %}{{ delta_horas_paradas }}<small>h</small>{% else %}#error{% endif%}
+                        {{ delta_horas_paradas|default_if_none:"0.00" }}<small>h</small>
                     </span>
                 </div>
             </div>
