Criando arquivo css administrativo

--- a/templates/template-administrativo.html
+++ b/templates/template-administrativo.html
@@ -21,7 +21,7 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
         {% comment %} MY STYLE {% endcomment %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style-vendedor.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style-administrativo.css' %}">
 
         {% block head %}{% endblock %}
     </head>
