--- a/usuario/templates/historico.html
+++ b/usuario/templates/historico.html
@@ -69,7 +69,28 @@
                 "autoWidth": false,
                 "cell-border": false,
                 "language": {
-                    "url": "dataTables.german.lang"
+                    "decimal":        "",
+                    "emptyTable":     "Não possui registros",
+                    "info":           "Mostrando _START_ até _END_ de _TOTAL_",
+                    "infoEmpty":      "Mostrando 0 até 0 de 0",
+                    "infoFiltered":   "(filtro _MAX_ total)",
+                    "infoPostFix":    "",
+                    "thousands":      ",",
+                    "lengthMenu":     "Mostrar _MENU_",
+                    "loadingRecords": "Carregando...",
+                    "processing":     "Carregando...",
+                    "search":         "Busca:",
+                    "zeroRecords":    "Não foi localizado nenhum registro",
+                    "paginate": {
+                        "first":      "Início",
+                        "last":       "Última",
+                        "next":       "Próxima",
+                        "previous":   "Anterior"
+                    },
+                    "aria": {
+                        "sortAscending":  ": Click para ordernar crescente",
+                        "sortDescending": ": Click para ordernar decrescente"
+                    }
                 }
             });
         });
