Alterando idioma da tabela

--- a/usuario/templates/veiculo.html
+++ b/usuario/templates/veiculo.html
@@ -145,6 +145,30 @@
                 "ordering": true,
                 "info": true,
                 "autoWidth": false,
+                "language": {
+                    "decimal":        "",
+                    "emptyTable":     "Não possui registros",
+                    "info":           "Mostrando _START_ até _END_ de _TOTAL_",
+                    "infoEmpty":      "Mostrando 0 até 0 de 0",
+                    "infoFiltered":   "(filtro _MAX_ total)",
+                    "infoPostFix":    "",
+                    "thousands":      ",",
+                    "lengthMenu":     "Mostrar _MENU_",
+                    "loadingRecords": "Carregando...",
+                    "processing":     "Carregando...",
+                    "search":         "Busca:",
+                    "zeroRecords":    "Não foi localizado nenhum registro",
+                    "paginate": {
+                        "first":      "Início",
+                        "last":       "Última",
+                        "next":       "Próxima",
+                        "previous":   "Anterior"
+                    },
+                    "aria": {
+                        "sortAscending":  ": Click para ordernar crescente",
+                        "sortDescending": ": Click para ordernar decrescente"
+                    }
+                }
             });
         });
     </script>
