--- a/usuario/templates/veiculo.html
+++ b/usuario/templates/veiculo.html
@@ -147,26 +147,26 @@
                 "autoWidth": false,
                 "language": {
                     "decimal":        "",
-                    "emptyTable":     "Não possui registros",
-                    "info":           "Mostrando _START_ até _END_ de _TOTAL_",
-                    "infoEmpty":      "Mostrando 0 até 0 de 0",
-                    "infoFiltered":   "(filtro _MAX_ total)",
+                    "emptyTable":     "Nenhum registro encontrado",
+                    "info":           "Mostrando de _START_ até _END_ de _TOTAL_ registros",
+                    "infoEmpty":      "Mostrando 0 até 0 de 0 registros",
+                    "infoFiltered":   "(Filtrados de _MAX_ registros)",
                     "infoPostFix":    "",
                     "thousands":      ",",
-                    "lengthMenu":     "Mostrar _MENU_",
+                    "lengthMenu":     "_MENU_ resultados por página",
                     "loadingRecords": "Carregando...",
-                    "processing":     "Carregando...",
+                    "processing":     "Processando...",
                     "search":         "Busca:",
-                    "zeroRecords":    "Não foi localizado nenhum registro",
+                    "zeroRecords":    "Nenhum registro encontrado",
                     "paginate": {
-                        "first":      "Início",
-                        "last":       "Última",
-                        "next":       "Próxima",
+                        "next":       "Próximo",
                         "previous":   "Anterior"
+                        "first":      "Primeiro",
+                        "last":       "Último",
                     },
                     "aria": {
-                        "sortAscending":  ": Click para ordernar crescente",
-                        "sortDescending": ": Click para ordernar decrescente"
+                        "sSortAscending": ": Ordenar colunas de forma ascendente",
+                        "sSortDescending": ": Ordenar colunas de forma descendente"
                     }
                 }
             });
